PR/43625: Mark Davies: Fix pselect(2) to honor the temporary mask. pselect(2) (and pollts(2)) are similar to sigsuspend(2) in that they temporarily change the process signal mask and wait for signal delivery. Factor out and share the code that does this.